saturn-program-macros/tests/compile_fail/missing_btc_tx_cfg.stderr
error: `btc_tx_cfg` must specify `max_inputs_to_sign` when bitcoin_transaction is true
  --> tests/compile_fail/missing_btc_tx_cfg.rs:10:1
   |
10 | / #[saturn_program(
11 | |     instruction = "crate::instruction::Instr",
12 | |     bitcoin_transaction = true
13 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `saturn_program` (in Nightly builds, run with -Z macro-backtrace for more info)
